--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>rasmirm - personal website</title>
+    <title>rasmirm</title>
     <!--<link rel="icon" href="images/icon.png" type="image/gif" sizes="16x16">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="www.rasmirm.com is the personl website of Rashmi Ranjan Mohanty">
+    <meta name="description" content="Personal Website">
     <meta name="author" content="">
 
     <!--[if lt IE 9]>
