--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>rasmirm</title>
     <!--<link rel="icon" href="images/icon.png" type="image/gif" sizes="16x16">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal Website">
+    <meta name="description" content="www.rasmirm.com">
     <meta name="author" content="">
 
     <!--[if lt IE 9]>
@@ -91,9 +91,9 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="spacer-double d-block d-sm-none d-md-block"></div>
-                                    <h1 class="big b">Welcome to </br>www.<span>rasmirm<span class="underline"></span></span>.com my personal website.</h1>
+                                    <h1 class="big b">Welcome to my digital realm at</br><span>www.rasmirm.com<span class="underline"></span></span> your gateway to my  universe...</h1>
                                     <div class="spacer-half"></div>
-                                    <p class="lead">"Explore this space to see samples of my work and learn more about my skills and areas of expertise. I look forward to connecting and discussing how we can create a mutually beneficial partnership." - Rashmi Ranjan Mohanty</p>
+                                    <p class="lead"><br>"Dive in and discover the range of skills and expertise I bring to the table. I’m eager to connect and explore how we can team up for something amazing." <br><br>Rashmi Ranjan Mohanty | BIM Specialist, Architecture<br>Passionate about integrating technology and management in Architecture.</p>
                                     <div class="spacer-half"></div>
                                     <!--<a class="btn-border" href="https://themeforest.net/item/bolo-onepage-creative-website-template/25030305">Buy Bolo Now</a>-->
                                 </div>
@@ -156,8 +156,12 @@
             </section>
             <!-- section close -->
 
+
+
+
+
             <!-- section begin -->
-            <section id="section-screenshots" aria-label="section" class="text-light" data-bgcolor="#2d3840">
+            <section id="section-screenshots" aria-label="section" class="text-light">
                 <div id="ss-carousel" class="owl-carousel owl-theme">
 
                     <figure class="picframe">
@@ -212,60 +216,24 @@
                         <img src="images/ss/4.jpg" class="img-fullwidth" alt="">
                     </figure>
 
-                    <figure class="picframe">
-                        <a class="image-popup" href="images/ss/5.jpg">
-                            <span class="overlay-v">
-										<span class="v-center text-center">
-											<span>
-												View larger
-											</span>
-                            </span>
-                            </span>
-                        </a>
-                        <img src="images/ss/5.jpg" class="img-fullwidth" alt="">
-                    </figure>
-
-                    <figure class="picframe">
-                        <a class="image-popup" href="images/ss/6.jpg">
-                            <span class="overlay-v">
-										<span class="v-center text-center">
-											<span>
-												View larger
-											</span>
-                            </span>
-                            </span>
-                        </a>
-                        <img src="images/ss/6.jpg" class="img-fullwidth" alt="">
-                    </figure>
-
-                    <figure class="picframe">
-                        <a class="image-popup" href="images/ss/7.jpg">
-                            <span class="overlay-v">
-										<span class="v-center text-center">
-											<span>
-												View larger
-											</span>
-                            </span>
-                            </span>
-                        </a>
-                        <img src="images/ss/7.jpg" class="img-fullwidth" alt="">
-                    </figure>
-
-                    <figure class="picframe">
-                        <a class="image-popup" href="images/ss/8.jpg">
-                            <span class="overlay-v">
-										<span class="v-center text-center">
-											<span>
-												View larger
-											</span>
-                            </span>
-                            </span>
-                        </a>
-                        <img src="images/ss/8.jpg" class="img-fullwidth" alt="">
-                    </figure>
                 </div>
             </section>
             <!-- section close -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
             <!-- section service begin -->
@@ -320,6 +288,7 @@
 
                         <div class="col-md-12">
                             <div id="blog-carousel" class="owl-carousel owl-theme">
+                                
                                 <div class="post-item s1 item">
                                     <div class="date-box">
                                         <div class="m">01</div>
@@ -416,14 +385,16 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="section-contact" class="bg-color">
+            <section id="section-contact" class="bg-color" style="padding: 0; margin: 2;">
                 <div class="container">
+
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            <h2>Contact</h2>
+                            <h2></h2>
                             <div class="spacer-single"></div>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-md-4 text-center">
                             <div class="box-container">
@@ -436,19 +407,25 @@
                                 <div class="spacer-single"></div>
                             </div>
                         </div>
-                        <div class="col-md-4 text-left">
+                        <div class="col-md-4 text-left" >
                             <div>
-                                <h3>Call:</h3>
-                                <h6>+91-9028249690</h6>
-                                <div class="spacer-single"></div>
-                                <h3>Email:</h3>
-                                <h6>rasmirm@gmail.com</h6>
-                                <div class="spacer-single"></div>
-                                <h3>Location:</h3>
-                                <h6>Pune, Maharashtra, INDIA</h6>                                
+                                <h3 style="color: white;">Contact</h3>
+                                <h6 style="color: white;">Call: &nbsp; +91-9028249690</h3>
+                                <h6 style="color: white;">Email: &nbsp; rasmirm@gmail.com</h3>
+                                <h6 style="color: white;">Location: &nbsp; Pune, Maharashtra, INDIA</h3> 
+                                <div class="col-md-6 text-left">
+                                    <div class="social-icons">
+                                        <a href="https://www.linkedin.com/in/rashmi-ranjan-mohanty">
+                                            <img src="images/logo/linkedin.png" alt="Your New Logo" style="height: 40px; display: block; margin-left: 0;">
+                                        </a>
+                                    </div>
+                                </div>  
+                                <h6 style="color: white;">© 2024 www.rasmirm.com. All rights reserved.</h3>  
+                                <div class="spacer-single"></div> 
                             </div>
                         </div>
                     </div>
+
                 </div>
             </section>
             <!-- section close -->
@@ -456,35 +433,9 @@
         </div>
         <!-- content close -->
 
-
-        <!-- footer begin -->
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 sm-mb10">
-                        <div class="mt10">&copy; Copyright 2024 - Designed & Built by Rashmi Ranjan Mohanty </div>
-                    </div>
-
-                    <div class="col-md-6">
-                            <div class="social-icons float-lg-end">
-                                <!--<a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                                <a href="#"><i class="fa fa-twitter fa-lg"></i></a>-->
-                                <a href="https://www.linkedin.com/in/rashmi-ranjan-mohanty"><i class="fa fa-linkedin fa-lg"></i></a>
-                                <!--<a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                                <a href="#"><i class="fa fa-rss fa-lg"></i></a>-->
-                            </div>
-                        </div>
-                </div>
-            </div>
-        </footer>      
-        <!-- footer close -->
-
-        <!--<a href="#" id="back-to-top"></a>-->
-
         <div id="preloader">
             <div class="preloader1"></div>
         </div>
-
     </div>
 
         <!-- Javascript Files
@@ -502,7 +453,7 @@
 		<script src="js/jquery.easeScroll.js"></script>
 		<script src="js/jarallax.js"></script>
         <script src="js/designesia.js"></script>
-        <script src="js/validation.js"></script>
+        <script src="js/validation.js"></script>     
 
 </body>
 
